ferray-core-macros/tests/compile_fail/ferray_record_missing_repr_c.stderr
error: FerrayRecord requires #[repr(C)] on the struct
  --> tests/compile_fail/ferray_record_missing_repr_c.rs:10:8
   |
10 | struct NoReprC {
   |        ^^^^^^^
